<resources>
    <string name="app_name">Laook</string>
    <string name="selamat_datang_di_laook">Welcome to Laook</string>
    <string name="hint_kata_sandi">Password</string>
    <string name="hint_alamat_email">Email Address</string>
    <string name="fullname">Full Name</string>
    <string name="daftar_sekarang">Register now</string>
    <string name="tidak_punya_akun">Don\'t have an account?</string>
    <string name="masuk">Sign in</string>
    <string name="register_logo">Register logo</string>
    <string name="login_logo">Login logo</string>
    <string name="sudah_punya_akun">Already have an account?</string>
    <string name="daftar">Register</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="input_email">Please input your email</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="input_pass">Please input your password</string>
    <string name="pass_minimum_length">Password must be at least 8 characters long</string>
    <string name="password">Password</string>
    <string name="email">Email address</string>
    <string name="package_name">com.example.laook</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="title_scan">Scan ingredients</string>
    <string name="back_button">back_button</string>
    <string name="btn_info">info</string>
    <string name="name_profile">Fullname</string>
    <string name="email_profile">Email Profile</string>
    <string name="setting_profile">Setting Profile</string>
    <string name="no_ingredient">No ingredients were detected</string>
    <string name="add_ingredient">add ingredient</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="confirm">Confirm</string>
    <string name="detail">Detail</string>
    <string name="title_detail">Detail Menu</string>
    <string name="title_ingredients">Required ingredients:</string>
    <string name="title_how_to_cook">How to cook:</string>
    <string name="sub_title_home">Healthy food for a healthier life in the future</string>
    <string name="desc_sub_title">enjoy a healthy life by consuming healthy food that tastes great that makes your life healthier for today and in the future</string>
    <string name="menu_title">Menu Recommendations</string>
    <string name="adjusment_ingredient">Adjustment Ingredients</string>
    <string name="save">Save</string>
    <string name="welcome_home">\nLooking for cooking ideas?</string>
    <string name="Welcome_home_hi">Hi,</string>
    <string name="how_to_scan_1">1. Arrange all the cooking ingredients on a flat place like a table</string>
    <string name="how_to_scan_2">2. Place the ingredients facing up (towards the camera)</string>
    <string name="how_to_scan_3">3. Take photos of ingredients</string>
    <string name="confirm_dialog_info">I Understand</string>
    <string name="how_to_scan">How to scan ingredients</string>
    <string name="ingredient_list">ingredient</string>
    <string name="input_picture">input picture</string>
    <string name="scan_menu">Scan Menu</string>
    <string name="input_picture_from_gallery">input picture from gallery</string>
    <string name="confirm_picture">confirm picture</string>
    <string name="splash_screen">splash screen</string>
    <string name="correct_image">correct image</string>
    <string name="incorrect_image">incorrect image</string>
    <string name="home_image">home image</string>
    <string name="edit_profile">edit profile</string>
    <string name="icon_language">icon language</string>
    <string name="icon_to">icon to</string>
    <string name="icon_logout">icon logout</string>
    <string name="delete_ingredient">delete ingredient</string>
    <string name="menu_name">menu name</string>
    <string name="picture_menu">picture menu</string>
    <string name="back_to_home">Back to Home</string>
    <string name="no_data_menu">There is no menu available yet</string>
    <string name="back">Back</string>
    <string name="error_empty_fields">Empty Field Are not Allowed!</string>
    <string name="ingredient_already_added">Ingredient already added</string>
    <string name="image_uploaded_successfully">Image uploaded successfully</string>
    <string name="input_image_first">Please insert an image file first</string>


</resources>