<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvFullname"
        android:layout_width="277dp"
        android:layout_height="87dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/selamat_datang_di_laook"
        android:textColor="@color/teal_green"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:ems="12"
        android:fontFamily="@font/poppins"
        android:hint="@string/hint_alamat_email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/passET"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_border"
        android:ems="12"
        android:fontFamily="@font/poppins"
        android:hint="@string/hint_kata_sandi"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailET"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/masuk"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passET"
        android:textAllCaps="false"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="344dp"
        android:layout_height="218dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFullname"
        app:srcCompat="@drawable/login_ava"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="67dp"
        android:fontFamily="@font/poppins"
        android:text="@string/tidak_punya_akun"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/registerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/poppins"
        android:letterSpacing="-0.005"
        android:text="@string/daftar_sekarang"
        android:textColor="@color/blue"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>