<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/white"
        android:elevation="4dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title_profile"
            android:textColor="@color/primary_green"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="173dp"
            tools:layout_editor_absoluteY="16dp" />



    </com.google.android.material.appbar.MaterialToolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo_profile"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvFullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/name_profile"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/photo_profile"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins"
        android:text="@string/email_profile"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/photo_profile"
        app:layout_constraintTop_toBottomOf="@+id/tvFullname" />

    <ImageView
        android:id="@+id/edit_profile"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/edit_profile"
        android:src="@drawable/edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/primary_black"
        android:text="@string/setting_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_profile" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/logo_language"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_language"
            android:contentDescription="@string/icon_language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:fontFamily="@font/poppins"
            android:text="@string/language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logo_language"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/language_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="246dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_to"
            android:contentDescription="@string/icon_to"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/garis1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language">

        <ImageView
            android:id="@+id/logo_logout"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/icon_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:fontFamily="@font/poppins"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logo_logout"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logout_arrrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="246dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_to"
            android:contentDescription="@string/icon_to"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/garis2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>