<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_item_detail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tvTitleInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/how_to_scan"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="5dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ivPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="5dp">

            <!-- Guideline untuk poros tengah -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/scan_correct"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/scan_wrong"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/todo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/poppins"
            android:text="@string/how_to_scan_1"
            android:textAlignment="textStart"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/todo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/poppins"
            android:text="@string/how_to_scan_2"
            android:textAlignment="textStart"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/todo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/poppins"
            android:text="@string/how_to_scan_3"
            android:textAlignment="textStart"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/btnUnderstand"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/confirm_dialog_info"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.cardview.widget.CardView>