<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/white"
        android:elevation="4dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_gravity="start"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back" />


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title_scan"
            android:textColor="@color/primary_green"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="173dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageView
            android:id="@+id/btnInfo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/btn_info"
            android:src="@drawable/ic_info"
            android:layout_gravity="end"
            android:layout_marginEnd="25dp"/>

    </com.google.android.material.appbar.MaterialToolbar>


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="359dp"
        android:layout_height="369dp"
        android:layout_marginTop="64dp"
        android:background="@color/gray"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:srcCompat="@tools:sample/avatars" />

<!--    <ImageView-->
<!--        android:id="@+id/imageView8"-->
<!--        android:layout_width="42dp"-->
<!--        android:layout_height="48dp"-->
<!--        app:srcCompat="@drawable/ic_camera"-->
<!--        tools:layout_editor_absoluteX="186dp"-->
<!--        tools:layout_editor_absoluteY="557dp" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView9"-->
<!--        android:layout_width="63dp"-->
<!--        android:layout_height="77dp"-->
<!--        app:srcCompat="@drawable/ic_check"-->
<!--        tools:layout_editor_absoluteX="309dp"-->
<!--        tools:layout_editor_absoluteY="570dp" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView10"-->
<!--        android:layout_width="61dp"-->
<!--        android:layout_height="66dp"-->
<!--        app:srcCompat="@drawable/ic_gallery"-->
<!--        tools:layout_editor_absoluteX="57dp"-->
<!--        tools:layout_editor_absoluteY="597dp" />-->


<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/nav_view"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="0dp"-->
<!--        android:layout_marginEnd="0dp"-->
<!--        android:background="?android:attr/windowBackground"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:menu="@menu/bottom_nav_menu" />-->
</androidx.constraintlayout.widget.ConstraintLayout>